--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^7.2"
+        "guzzlehttp/guzzle": "^6.2|^7.0"
     },
     "autoload": {
         "psr-4": { "Goletter\\YahooAPI\\" : "lib/" }
